fix color picker on firefox

--- a/extension/firefox/popup/components/interactive/ActiveSidebarColorSwitch.css
+++ b/extension/firefox/popup/components/interactive/ActiveSidebarColorSwitch.css
@@ -33,7 +33,7 @@
 .ActiveSidebarColorSwitch_Popup__Options {
     margin: auto;
     display: flex;
-    width: fit-content;
+    width: -moz-fit-content;
 }
 
 .ActiveSidebarColorSwitch_Popup__ColorOption {
