--- a/extension/firefox/popup/components/interactive/LimitedColorSwitch.css
+++ b/extension/firefox/popup/components/interactive/LimitedColorSwitch.css
@@ -33,7 +33,7 @@
 .LimitedColorSwitch_Popup__Options {
     margin: auto;
     display: flex;
-    width: fit-content;
+    width: -moz-fit-content;
 }
 
 .LimitedColorSwitch_Popup__ColorOption {
